[package]
name = "cw-ics20-hook"
version = "1.0.0"
authors = ["Amit Prasad <amit@entropiclabs.io>"]
edition = "2021"
description = "Wrapper contract for Kujira's ICS20 cosmwasm hooks"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.0.1"
cosmwasm-std = { version = "2.0.1", default-features = false, features = [
  "cosmwasm_1_3",
] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
kujira = { version = "1.3.0" }

[dev-dependencies]
cw-multi-test = "2.0.0"
